fix: notifications size to content, align to right edge

--- a/src/assets/styles/common/_notifications.scss
+++ b/src/assets/styles/common/_notifications.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
-    max-width: 36rem;
+    align-items: flex-end;
     pointer-events: none;
 
     @media (width < $bp-tablet) {
